--- a/Password_Generator.ipynb
+++ b/Password_Generator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZwoqmShbhlTgZgskfxZbj",
+      "authorship_tag": "ABX9TyPKHpArFeh4olAYvLysvD9u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SandKrish/Python-Scripts/blob/main/Password_Generator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This notebook generates password with number of charaters, symbol and numbers we provide as input."
+      ],
+      "metadata": {
+        "id": "OsZiiacgYTlE"
+      }
     },
     {
       "cell_type": "code",
